# fried-catfish

./: .gitignore  .mcp.json  ADAPTING.md  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  RESEARCH.md  SPEC.md  plugin.json  pyproject.toml
cognition/: evolution.md  generation.md  index.md  meta-review.md  ranking.md  reflection.md  supervisor.md
config/: tags.yaml
demo/: catfish.tape  zoom.sh
docs/: qa_playbook.md
examples/biotech/: README.md  tags.yaml
examples/inbox/: bene_gesserit_warning.md  council_at_sietch.md  fremen_fervor.md  landsraad_threat.md  prescient_vision.md
examples/incidents/: README.md  RESULTS.md  backtest.py  tags.yaml
examples/lunch/: README.md  tags.yaml
hooks/: hooks.json
personas/: pm.yaml  qa.yaml  security.yaml  skeptic.yaml
skills/map/: SKILL.md
skills/retro/: SKILL.md
skills/scout/: SKILL.md
skills/tournament/: SKILL.md
tests/: test_backtest.py  test_bradley_terry.py  test_card.py  test_codemap.py  test_cognition.py  test_demo_tournament.py  test_incremental_sow.py  test_ingest.py  test_knowledge_config.py  test_mcp_tools.py  test_personas.py  test_provenance.py  test_retro.py
wiki/: business.md  catfish-__main__.md  catfish-card.md  catfish-codemap.md  catfish-cognition.md  catfish-fixtures.md  catfish-gate.md  catfish-knowledge.md  catfish-linear.md  catfish-llm.md  catfish-mcp_server.md  catfish-mcp_tools.md  catfish-memory.md  catfish-mermaid_theme.md  catfish-models.md  catfish-personas.md  catfish-retro.md  catfish-server.md  catfish-tournament.md  catfish-tournament_view.md  catfish.md  index.md
(+85 files in other folders)
